# streamlit_pages

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  installation.md  usage.ipynb
src/streamlit_pages/: __init__.py  streamlit_pages.py
tests/: test_streamlit_pages.py
