[tool.poetry]
name = "streamlit_pages"
version = "0.1.0"
description = "Addons like multipages for streamlit webapp"
authors = ["Venkatesh Boddu"]
license = "MIT"
readme = "README.md"
documentation = "https://streamlit_pages.readthedocs.io/en/latest/"
homepage = "https://github.com/bvenkatesh-ai/streamlit_pages"
repository = "https://github.com/bvenkatesh-ai/streamlit_pages"

[tool.poetry.dependencies]
python = "^3.6"
streamlit ="^0.84"

[tool.poetry.dev-dependencies]
"backports.functools-lru-cache" = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
